--- a/modules/holodeckb2b-security/sec-provider/pom.xml
+++ b/modules/holodeckb2b-security/sec-provider/pom.xml
@@ -57,7 +57,13 @@
             <artifactId>wss4j-ws-security-dom</artifactId>
             <version>${wss4j.version}</version>
         </dependency>
-
+        <!-- The 3.0.5-SNAPSHOT version of Santuario is needed for support of the brainpol EC -->
+		<dependency>
+			<groupId>org.apache.santuario</groupId>
+    		<artifactId>xmlsec</artifactId>
+    		<version>3.0.5-SNAPSHOT</version>	
+		</dependency>
+		
         <!-- Test dependencies -->
 	    <dependency>
 	        <groupId>org.junit.jupiter</groupId>
@@ -80,6 +86,12 @@
             <scope>test</scope>
         </dependency>
 		<dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-core</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>        
+		<dependency>
 			<groupId>org.holodeckb2b.commons</groupId>
 			<artifactId>generic-utils</artifactId>
 			<type>test-jar</type>
@@ -87,4 +99,12 @@
 		</dependency>        
     </dependencies>
     
+    <!-- Because we need to include the SNAPSHOT version of Santuario we have to define the repo where to get it -->
+    <repositories>
+		<repository>
+            <id>apache.snapshots.https</id>
+            <name>Apache Development Snapshot Repository</name>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+		</repository>
+	</repositories>
 </project>
