--- a/modules/holodeckb2b-security/certmanager/pom.xml
+++ b/modules/holodeckb2b-security/certmanager/pom.xml
@@ -54,7 +54,11 @@
         </dependency>
 
         <!-- Add JAXB for Java9 and later compatibilitu -->
-		<dependency>
+        <dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
 		</dependency>
