--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -66,7 +66,41 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-ebms3-secprovider</artifactId>
             <version>${project.version}</version>
-        </dependency>        
+        </dependency>    
+        <!-- Due to the local dependency with a relative path all dependencies 
+            of the security provider's pom are excluded. Therefore we add them
+            here to ensure they are included in the package.
+            NOTE that this is a temporary solution that is to be removed when
+            a version of Santuario with Brainpool support is released
+        -->
+        <dependency>
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-dom</artifactId>
+            <version>3.0.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.mail</groupId>
+                    <artifactId>jakarta.mail-api</artifactId>
+                </exclusion>					
+                <exclusion>
+                    <groupId>org.opensaml</groupId>
+                    <artifactId>opensaml-saml-impl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.opensaml</groupId>
+                    <artifactId>opensaml-xacml-impl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.opensaml</groupId>
+                    <artifactId>opensaml-xacml-saml-impl</artifactId>
+                </exclusion>
+                <!-- Santuario is excluded because we include a customised version needed for Brainpool EC support -->
+                <exclusion>
+                    <groupId>org.apache.santuario</groupId>
+                    <artifactId>xmlsec</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <!-- The extension for API to provide info to the default UI -->
         <dependency>
             <groupId>${project.groupId}</groupId>
