--- a/modules/holodeckb2b-as4secprovider/pom.xml
+++ b/modules/holodeckb2b-as4secprovider/pom.xml
@@ -20,22 +20,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.holodeckb2b</groupId>
-        <artifactId>holodeckb2b-security</artifactId>
+        <artifactId>holodeckb2b</artifactId>
         <version>8.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>holodeckb2b-certmanager</artifactId>
+    <artifactId>holodeckb2b-ebms3-secprovider</artifactId>
     <packaging>jar</packaging>
-    <name>Holodeck B2B - Default Certificate Manager</name>
-    <description>This module includes the default implementation of the Holodeck B2B Certificate Manager</description>
+    <name>Holodeck B2B - Default Security Provider</name>
+    <description>This module includes the default implementation of the Holodeck B2B Security Provider for creating/processing the WS-Security header in ebMS3/AS4 messages</description>
     <inceptionYear>2020</inceptionYear>
 
+    <properties>
+        <wss4j.version>3.0.4</wss4j.version>
+    </properties>
+    
     <dependencies>
         <!-- The other Holodeck B2B libraries -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>holodeckb2b-interfaces</artifactId>
-        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-core</artifactId>
@@ -44,30 +44,43 @@
 					<groupId>org.simpleframework</groupId>
 					<artifactId>simple-xml</artifactId>
 				</exclusion>
-			</exclusions>
+			</exclusions>            
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-certmanager</artifactId>         
         </dependency>
 
-        <!-- WSS4J Security libs are needed because of service supplied to the default security provider -->
+        <!-- WSS4J Security libs -->
         <dependency>
             <groupId>org.apache.wss4j</groupId>
-            <artifactId>wss4j-ws-security-common</artifactId>
+            <artifactId>wss4j-ws-security-common</artifactId>            
+            <version>${wss4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.mail</groupId>
+                    <artifactId>jakarta.mail-api</artifactId>
+                </exclusion>					
+                <exclusion>
+                    <groupId>org.opensaml</groupId>
+                    <artifactId>opensaml-saml-impl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.opensaml</groupId>
+                    <artifactId>opensaml-xacml-impl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.opensaml</groupId>
+                    <artifactId>opensaml-xacml-saml-impl</artifactId>
+                </exclusion>
+            </exclusions>            
         </dependency>
-
-        <!-- Add JAXB for Java9 and later compatibilitu -->
         <dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-        </dependency>
-        <dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-		</dependency>
-        <!-- Logging -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-        </dependency>
-
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-dom</artifactId>
+            <version>${wss4j.version}</version>            
+        </dependency>       
+        
         <!-- Test dependencies -->
 	    <dependency>
 	        <groupId>org.junit.jupiter</groupId>
@@ -89,29 +102,17 @@
             <artifactId>log4j-core</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-core</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>        
+		<dependency>
+			<groupId>org.holodeckb2b.commons</groupId>
+			<artifactId>generic-utils</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>        
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.5.0</version>
-                <executions>
-                    <execution>
-                        <id>xjc</id>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <sources>
-                        <source>src/main/resources/xsd/hb2b-certmanager-cfg.xsd</source>
-                    </sources>
-                    <packageName>org.holodeckb2b.security.trust.config</packageName>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
