--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<groupId>org.holodeckb2b</groupId>
 	<artifactId>holodeckb2b</artifactId>
 	<packaging>pom</packaging>
-	<version>8.0.0-SNAPSHOT</version>
+	<version>8.0.0</version>
 	<name>Holodeck B2B</name>
 	<url>http://www.holodeck-b2b.org/</url>
 	<inceptionYear>2015</inceptionYear>
